--- a/src/components/ElectionNewsSection/ElectionNewsSection.module.scss
+++ b/src/components/ElectionNewsSection/ElectionNewsSection.module.scss
@@ -3,3 +3,17 @@
   flex-direction: column;
   align-items: center;
 }
+
+.feedContainer {
+  align-self: stretch;
+  display: flex;
+  flex-direction: row;
+}
+
+.feed {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
